--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.jvnet.hudson.plugins</groupId>
+		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>1.330</version>
-		<relativePath>../pom.xml</relativePath>
+		<version>3.53</version>
+		<relativePath />
 	</parent>
 
 	<artifactId>script-realm</artifactId>
@@ -13,9 +13,13 @@
 	<name>Security Realm by custom script</name>
 	<description>Supports authentication by exeuting a custom script, to resolve groups for a user, a second script can be defined.</description>
 	<url>https://wiki.jenkins-ci.org/display/JENKINS/Script+Security+Realm</url>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jenkins.version>2.176.3</jenkins.version>
+		<java.level>8</java.level>
 	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -35,30 +39,20 @@
 			</plugin>
 		</plugins>
 	</build>
+
     <developers>
         <developer>
             <id>imod</id>
             <name>Dominik Bartholdi</name>
             <email>-</email>
         </developer>
-    </developers>	
+    </developers>
+
 	<scm>
 		<connection>scm:git:git://github.com/jenkins/script-realm-plugin.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/jenkinsci/script-realm-plugin.git</developerConnection>
 		<url>http://github.com/jenkins/script-realm-plugin</url>
 	</scm>
-	<distributionManagement>
-        <repository>
-            <id>java.net-m2-repository</id>
-            <url>http://maven.jenkins-ci.org:8081/content/repositories/releases/</url>
-        </repository>		
-		<!-- maven3 doesn't support anymore id local -->
-		<snapshotRepository>
-			<!-- prevent accidental deployment of SNAPSHOTS to repository -->
-			<id>local.repository</id>
-			<url>file:/tmp/dummy-repo</url>
-		</snapshotRepository>
-	</distributionManagement>
 
     <repositories>
         <repository>
