--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
 		<relativePath />
 	</parent>
 
-	<artifactId>script-realm</artifactId>
+	<artifactId>ldap-realm</artifactId>
 	<version>1.6-SNAPSHOT</version>
 	<packaging>hpi</packaging>
-	<name>Security Realm by custom script</name>
-	<description>Supports authentication by exeuting a custom script, to resolve groups for a user, a second script can be defined.</description>
-	<url>https://wiki.jenkins-ci.org/display/JENKINS/Script+Security+Realm</url>
+	<name>Jenkins ldap Realm plugin</name>
+	<description>Enables authentication through ldap.</description>
+	<url>https://github.com/mamh-java/script-realm-plugin</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,39 +20,108 @@
 		<java.level>8</java.level>
 	</properties>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.0</version>
-				<configuration>
-					<goals>deploy</goals>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.scm</groupId>
-						<artifactId>maven-scm-provider-gitexe</artifactId>
-						<version>1.3</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-		</plugins>
-	</build>
-
     <developers>
         <developer>
-            <id>imod</id>
-            <name>Dominik Bartholdi</name>
-            <email>-</email>
+            <id>bright</id>
+            <name>bright.ma</name>
+            <email>bright@mage.com</email>
         </developer>
     </developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/jenkins/script-realm-plugin.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/jenkinsci/script-realm-plugin.git</developerConnection>
-		<url>http://github.com/jenkins/script-realm-plugin</url>
+		<connection>scm:git:git://github.com/mamh-java/script-realm-plugin.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/mamh-java/script-realm-plugin.git</developerConnection>
+		<url>https://github.com/mamh-java/script-realm-plugin</url>
 	</scm>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>20.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jvnet.com4j.typelibs</groupId>
+			<artifactId>ado20</artifactId>
+			<version>1.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jvnet.com4j</groupId>
+					<artifactId>com4j</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.jvnet.com4j.typelibs</groupId>
+			<artifactId>active-directory</artifactId>
+			<version>1.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jvnet.com4j</groupId>
+					<artifactId>com4j</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.jvnet.com4j</groupId>
+			<artifactId>com4j</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>mailer</artifactId>
+			<version>1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- For docker integration tests -->
+		<dependency>
+			<groupId>org.jenkins-ci.test</groupId>
+			<artifactId>docker-fixtures</artifactId>
+			<version>1.8</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.inject</groupId>
+					<artifactId>guice</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>commons-io</groupId>
+					<artifactId>commons-io</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-databind</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.stefanbirkner</groupId>
+			<artifactId>system-rules</artifactId>
+			<version>1.19.0</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
     <repositories>
         <repository>
