--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,11 @@
 	</scm>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>mailer</artifactId>
+			<version>1.5</version>
+		</dependency>
 	</dependencies>
 
     <repositories>
